# AIVN

./: .dockerignore  .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml  test_vn_engine.py
backend/: Dockerfile  api_app.py  main.py  pyproject.toml  requirements.txt  vn_story.db
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_02_0058-c610cfd8311e_initial_tables.py  2026_03_04_0028-03c8a3994a2b_initial_tables.py
backend/core/: config.py  database.py  logging_config.py  orm.py
backend/models/: story_detailed_models.py  story_outline_models.py
backend/output/12/: screenplay.json  story_outline.json
backend/output/12/chapters/: ch1_snow_and_blood_scenes.json  ch2_asakusa_encounter_scenes.json  ch3_mugen_train_scenes.json  ch4_sun_conqueror_scenes.json  ch5_eternal_dawn_scenes.json
backend/output/12/scenes/: ch1_s1_the_discovery_detailed.json  ch1_s2_giyu_intervention_detailed.json  ch1_s3_urokodaki_meeting_detailed.json  ch1_s5_the_boulder_detailed.json  (+25 more)
backend/output/4/: screenplay.json  story_outline.json
backend/prompts/: chapter_generation_prompt.py  character_pose_prompt.py  image_generation_prompt.py  scene_generation_prompt.py  story_outline_prompt.py
backend/services/: genai_services.py  storage_services.py  story_workflow.py  story_workflow_old.py
backend/static/: game.html
backend/utils/: removebg.py  streaming_audio.py  voices_list.py
backend/vn_engine/: README.md  __init__.py  cache_manager.py  config.py  converter.py  core.py  graphics.py  headless.py  loader.py  main.py  stage.py  state_manager.py  utils.py
(+38 files in other folders)
