[project]
name = "aivn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "google-auth>=2.48.0",
    "google-cloud-storage>=3.9.0",
    "google-genai>=1.65.0",
    "moviepy>=2.2.1",
    "openinference-instrumentation-google-genai>=0.1.12",
    "pillow>=11.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "rembg[cpu]>=2.0.69",
    "sqlalchemy>=2.0.47",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.23.0",
    "withoutbg>=1.0.2",
    "google-cloud-texttospeech>=2.34.0",
    "structlog>=25.5.0",
    "langsmith>=0.7.14",
    "sentry-sdk>=2.54.0",
    "structlog-sentry>=2.2.1",
    "tenacity>=9.1.4",
    "fastapi[standard]>=0.135.1",
]
